ValidatingAdmissionPolicy/deployment-with-ten-replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-ten-replicas
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: quay.io/packit/nginx-unprivileged
        imagePullPolicy: IfNotPresent
        name: nginx
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
             - ALL
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      restartPolicy: Always
