ValidatingAdmissionPolicy/Replicas_ValidatingAdmissionPolicy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: max-replicas-policy
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - "v1"
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - "deployments"
  validations:
    - expression: 'object.spec.replicas <= 5'
      message: 'The number of replicas cannot exceed 5.'
