ValidatingAdmissionPolicy/Replicas_ValidatingAdmissionPolicyBinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: max-replicas-policy-binding
spec:
  policyName: max-replicas-policy
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: default
